<resources>
    <string name="app_name">1SecMusic</string>
    <string name="informations">Informations</string>
    <string name="welcome">Welcome to 1SecMusic. \nThe app to easely create playlist to play blind test with. \n Use the buttons to crete and edit yours playlists.</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="enter_playlist_description">Enter Playlist Description</string>
    <string name="add">add</string>
    <string name="play">play</string>
    <string name="edit">edit</string>
    <string name="proposition_3">proposition 3</string>
    <string name="proposition_2">proposition 2</string>
    <string name="proposition_1">proposition 1</string>
    <string name="movie_title">Movie title …</string>
    <string name="splash">Splash</string>
    <string name="txt_ntxt">txt \ntxt</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="this_actions_is_inreversible_nare_your_sur_you_want_to_delete_this_playlist">This actions is inreversible.\nAre your sur you want to delete this playlist ?</string>
    <string name="search_info">%1$s \n %2$s  \n %3$d tracks</string>
    <string name="no_playlist">\"No 1Sec playlist. Create one withe the (+) button \"</string>
    <string name="no_music">\"No music. Add an album with the (+) button \"</string>
    <string name="search_no_match">No match found. Try another research.</string>
    <string name="_1sec_playlistname">1Sec_playlistname</string>
    <string name="album">Album :</string>
    <string name="title">Title :</string>
    <string name="guess">Guess</string>
    <string name="next">Next</string>
    <string name="answer">Answer :</string>
    <string name="guess_column">Guess :</string>
    <string name="no_music_game">Please selected a playlist with some music to launch a game.</string>
    <string name="home">Home</string>
    <string name="music_nb_over_nb">Music %f / %f</string>
    <string name="start">Start</string>
</resources>