<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ResearchActivity">


    <EditText
        android:id="@+id/editTxtSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/movie_title"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/editTxtInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:onClick="addAlbum0ToPlaylist">

        <ImageView
            android:id="@+id/imgProp1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/proposition_1"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvInfo1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"/>
    </TableRow>

    <TableRow
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addAlbum1ToPlaylist">

        <ImageView
            android:id="@+id/imgProp2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/proposition_2"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvInfo2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:onClick="addAlbum2ToPlaylist">

        <ImageView
            android:id="@+id/imgProp3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/proposition_3"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvInfo3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2" />
    </TableRow>

</LinearLayout>