<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.EditPlaylistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/playlistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_1sec_playlistname"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/noMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAlbums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabDel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/delete"
                    android:src="@drawable/delete"
                    app:fabSize="mini"
                    android:theme="@style/Theme.AppCompat"
                    app:backgroundTint="@color/SpotiGreen" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/add"
                    android:src="@drawable/add"
                    android:theme="@style/Theme.AppCompat"
                    app:backgroundTint="@color/SpotiGreen" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/save"
                    app:srcCompat="@drawable/save"
                    app:fabSize="mini"
                    android:theme="@style/Theme.AppCompat"
                    app:backgroundTint="@color/SpotiGreen" />

    </LinearLayout>

</FrameLayout>