<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/noPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlaylists"
            android:layout_width="411dp"
            android:layout_height="474dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:contentDescription="@string/add"
            app:fabSize="mini"
            android:src="@drawable/add"
            android:theme="@style/Theme.AppCompat"
            app:backgroundTint="@color/SpotiGreen" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:contentDescription="@string/play"
            android:src="@drawable/playpausebtn"
            android:theme="@style/Theme.AppCompat"
            app:backgroundTint="@color/SpotiGreen" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:contentDescription="@string/edit"
            android:src="@drawable/edit"
            app:fabSize="mini"
            android:theme="@style/Theme.AppCompat"
            app:backgroundTint="@color/SpotiGreen" />
    </LinearLayout>
</FrameLayout>